@@ -2,7 +2,7 @@ local libq = require("__janky-quality__/lib/quality")
 
 local mods = {}
 
-function mods.effect(effect, quality)
+function mods.effect(effect, quality, suppress_delivery_quality)
     if not effect then
         return
     end
@@ -10,7 +10,7 @@ function mods.effect(effect, quality)
         if e.damage then
             e.damage.amount = e.damage.amount * (1.0 + 0.3 * quality.modifier)
         end
-        mods.trigger(e.action, quality)
+        mods.trigger(e.action, quality, suppress_delivery_quality)
         if e.sticker then
             e.sticker = libq.name_with_quality(libq.name_without_quality(e.sticker), quality)
         end
@@ -20,7 +20,7 @@ function mods.effect(effect, quality)
     end
 end
 
-function mods.delivery(delivery, quality)
+function mods.delivery(delivery, quality, suppress_delivery_quality)
     if not delivery then
         return
     end
@@ -30,34 +30,40 @@ function mods.delivery(delivery, quality)
         if d.max_length then
             d.max_length = d.max_length * (1.0 + 0.1 * quality.modifier) + 0.5 -- rounding up
         end
-        for _, name in pairs { "projectile", "beam", "stream" } do
-            if d[name] then
-                d[name] = libq.name_with_quality(libq.name_without_quality(d[name]), quality)
+        if not suppress_delivery_quality then
+            for _, name in pairs { "projectile", "beam", "stream" } do
+                if d[name] then
+                    d[name] = libq.name_with_quality(libq.name_without_quality(d[name]), quality)
+                end
             end
         end
     end
 end
 
-function mods.trigger(trigger, quality)
+function mods.trigger(trigger, quality, suppress_delivery_quality)
     if not trigger then
         return nil
     end
     for _, t in pairs(trigger.type and { trigger } or trigger) do
-        mods.effect(t.range_effects, quality)
-        mods.delivery(t.action_delivery, quality)
+        mods.effect(t.range_effects, quality, suppress_delivery_quality)
+        mods.delivery(t.action_delivery, quality, suppress_delivery_quality)
     end
     return trigger
 end
 
-function mods.ammo(ammo, quality)
+function mods.ammo(ammo, quality, suppress_delivery_quality)
     if not ammo or not ammo.ammo_type then
         return ammo
     end
     local ammo_type = ammo.ammo_type
     for _, at in pairs(ammo_type.category and { ammo_type } or ammo_type) do
-        mods.trigger(at.action, quality)
+        mods.trigger(at.action, quality, suppress_delivery_quality)
     end
     return ammo
+end
+
+function mods.ammo_suppressed(ammo, quality)
+    return mods.ammo(ammo, quality, true)
 end
 
 return mods
